--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,8 +8,26 @@
             "email": "antonaryo85@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "antonmarin\\want2watch\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "antonmarin\\want2watch\\": "tests"
+        }
+    },
+    "config": {
+        "discard-changes": true,
+        "sort-packages": true
+    },
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "symfony/http-kernel": "^5.2"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
     }
 }
