--- a/backend/composer.json
+++ b/backend/composer.json
@@ -28,6 +28,7 @@
         "symfony/http-kernel": "^5.2"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.12.74",
         "roave/security-advisories": "dev-master"
     }
 }
