--- a/backend/phpstan.neon
+++ b/backend/phpstan.neon
@@ -1,3 +1,7 @@
+includes:
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
+    - vendor/phpstan/phpstan-deprecation-rules/rules.neon
+    - vendor/pepakriz/phpstan-exception-rules/extension.neon
 parameters:
     level: 8
     paths:
