composer check draft

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -23,6 +23,11 @@ lint-markdown:
 lint-yaml:
 	docker run --rm -v $(PWD):/app -w /app sdesbure/yamllint sh -c "yamllint /app/*.yml"
 
+fix-cs:
+	docker run --rm -v $(PWD):/data/ -w /data/ oskarstark/php-cs-fixer-ga:2.18.2 --diff --allow-risky=yes
+
 test: sat
+composer-require:
+	$(CMD_DOCKER_RUN) bin/composer-require-checker.phar check /app/composer.json
 sat:
 	$(CMD_DOCKER_RUN) vendor/bin/phpstan analyse
