--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,7 +9,12 @@ services:
     working_dir: "/app"
     command:
       - php
+      - -d 
+      - variables_order=EGPCS
       - -S
       - 0.0.0.0:9000
       - -t
       - "/app/public"
+    environment:
+      APP_ENV: dev
+      APP_DEBUG: 1
