--- a/backend/Makefile
+++ b/backend/Makefile
@@ -26,7 +26,9 @@ lint-yaml:
 fix-cs:
 	docker run --rm -v $(PWD):/data/ -w /data/ oskarstark/php-cs-fixer-ga:2.18.2 --diff --allow-risky=yes
 
-test: composer-require sat
+test: container composer-require sat
+container:
+	$(CMD_DOCKER_RUN) bin/console -n lint:container
 composer-require:
 	$(CMD_DOCKER_RUN) bin/composer-require-checker.phar check /app/composer.json
 sat:
