--- a/backend/composer.json
+++ b/backend/composer.json
@@ -25,11 +25,13 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4",
+        "ext-Zend-OPcache": "^7.4",
         "symfony/console": "^5.2",
         "symfony/error-handler": "^5.2",
         "symfony/framework-bundle": "^5.2",
         "symfony/http-foundation": "^5.2",
-        "symfony/http-kernel": "^5.2"
+        "symfony/http-kernel": "^5.2",
+        "symfony/yaml": "^5.2"
     },
     "require-dev": {
         "pepakriz/phpstan-exception-rules": "^0.11.6",
