--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - 8080:9000
     volumes:
       - ".:/app"
+      - "~/.composer/auth.json:/root/.composer/auth.json"
     working_dir: "/app"
     command:
       - php
