want2watch-8 pipeline draft

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,8 +1,5 @@
 name: Backend pipeline
-on: 
-  push:
-    paths:
-      - backend
+on: [push]
 jobs:
   integration-pipeline:
     name: Integration pipeline
