--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,5 +1,8 @@
 name: Backend pipeline
-on: [push]
+on: 
+  push:
+    paths:
+      - backend
 jobs:
   integration-pipeline:
     name: Integration pipeline
