--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -9,4 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+      - uses: nwisbeta/validate-yaml-schema@v1.0.3
+        with:
+          yamlSchemasJson: |
+            {
+                "http://json.schemastore.org/github-workflow": ["/.github/workflow/*.yml", "/.github/workflow/*.yaml"]
+            }
