--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,10 +3,13 @@ on:
   push:
     paths:
       - backend
+defaults:
+  run:
+    working-directory: backend
 jobs:
   integration-pipeline:
     name: Integration pipeline
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v1
