--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -6,13 +6,9 @@ on:
 jobs:
   validate_workflows:
     name: Integration pipeline
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: nwisbeta/validate-yaml-schema@v1.0.3
-        with:
-          yamlSchemasJson: |
-            {
-                "http://json.schemastore.org/github-workflow": ["/.github/workflow/*.yml", "/.github/workflow/*.yaml"]
-            }
+      - name: Not implemented
+        run: echo "Not implemented yet!"
