--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,5 +1,6 @@
 .DEFAULT_GOAL=help
-CMD_DOCKER_RUN=docker-compose exec app
+CMD_DOCKER_EXEC=docker-compose exec app
+CMD_DOCKER_RUN=docker-compose run app
 COLOR_NONE="\\033[0m"
 COLOR_BLUE="\\033[34m"
 COLOR_CYAN="\\033[36m"
@@ -21,18 +22,20 @@ lint-dockerfile:
 lint-markdown:
 	docker run --rm -v "$(PWD):/app" -w /app markdownlint/markdownlint -i -g /app
 lint-yaml:
-	docker run --rm -v $(PWD):/app -w /app sdesbure/yamllint sh -c "yamllint /app/*.yml /app/resources/*.yml"
+	docker run --rm -v $(PWD):/app -w /app sdesbure/yamllint sh -c "yamllint /app/*.yml /app/http/*.yml"
 
 fix-cs:
 	docker run --rm -v $(PWD):/data/ -w /data/ oskarstark/php-cs-fixer-ga:2.18.2 --diff --allow-risky=yes
 
-test: container composer-require sat
+validate-post-build: container composer-require sat
 container:
 	$(CMD_DOCKER_RUN) bin/console -n lint:container
 composer-require:
 	$(CMD_DOCKER_RUN) bin/composer-require-checker.phar check /app/composer.json
 sat:
 	$(CMD_DOCKER_RUN) vendor/bin/phpstan analyse
+
+#test:
 
 spec-ui:
 	docker run -p 8092:8080 -e URL=openapi.yml -v $(PWD)/http/specification.yml:/usr/share/nginx/html/openapi.yml swaggerapi/swagger-ui
