--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,5 +22,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Test
+      - name: Post-build validations
         run: make validate-post-build
