--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "antonmarin\\want2watch\\": "tests"
+            "antonmarin\\want2watch\\": "tests/unit"
         }
     },
     "config": {
@@ -40,6 +40,7 @@
         "phpstan/phpstan": "^0.12.74",
         "phpstan/phpstan-deprecation-rules": "^0.12.6",
         "phpstan/phpstan-strict-rules": "^0.12.9",
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master"
     }
 }
