--- a/backend/composer.json
+++ b/backend/composer.json
@@ -15,7 +15,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "antonmarin\\want2watch\\": "tests/unit"
+            "antonmarin\\want2watch\\": "tests/unit",
+            "antonmarin\\want2watch\\tests\\support\\": "tests/_support"
         }
     },
     "config": {
@@ -33,6 +34,7 @@
         "symfony/http-foundation": "^5.2",
         "symfony/http-kernel": "^5.2",
         "symfony/routing": "^5.2",
+        "symfony/validator": "^5.2",
         "symfony/yaml": "^5.2"
     },
     "require-dev": {
