--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -7,20 +7,11 @@ defaults:
   run:
     working-directory: backend
 jobs:
-  pre-build:
-    name: pre build
+  pipeline:
+    name: pipeline
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Pre-build validations
-        run: make lint
-      
-  post-build:
-    name: post build
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Post-build validations
-        run: make build validate-post-build test
+      - name: Validations
+        run: make lint build validate-post-build
