--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,20 @@
 FROM antonmarin/php:7.4-alpine-fpm as runtime
 
-FROM runtime as application
+FROM runtime as application-deps
 WORKDIR /app/
 COPY composer.json composer.lock ./
 RUN composer install --no-interaction --no-dev --no-suggest --optimize-autoloader
+
+FROM application-deps as debug-deps
+RUN composer install --no-interaction --no-suggest
+
+FROM application-deps as application
 COPY bin ./bin/
 COPY public ./public/
 COPY src ./src/
 COPY config ./config/
 
 FROM application as debug
-RUN composer install --no-interaction --no-suggest
+COPY --from=debug-deps /app/vendor ./vendor/
 COPY tests ./tests/
 COPY phpstan.neon phpunit.xml ./
