--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "antonmarin/want2watch",
+    "description": "Bookmarks for movies and series",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -27,6 +28,7 @@
     "require": {
         "php": "^7.4",
         "ext-zend-opcache": "^7.4",
+        "psr/log": "^1.1",
         "symfony/console": "^5.2",
         "symfony/dependency-injection": "^5.2",
         "symfony/error-handler": "^5.2",
