want2watch-5 Move routing to annotations
ref #want2watch-5

--- a/backend/src/Infrastructure/Resources/services.yaml
+++ b/backend/src/Infrastructure/Resources/services.yaml
@@ -6,5 +6,7 @@ services:
 
   antonmarin\want2watch\Infrastructure\:
     resource: '../*'
+
+  antonmarin\want2watch\Infrastructure\Http\SymfonyHttpKernel\RequestDTOResolver:
     tags:
       - { name: controller.request_value_resolver, priority: 50 }
