--- a/backend/composer.json
+++ b/backend/composer.json
@@ -28,6 +28,7 @@
     "require": {
         "php": "^7.4",
         "ext-zend-opcache": "^7.4",
+        "doctrine/annotations": "^1.12",
         "psr/log": "^1.1",
         "symfony/console": "^5.2",
         "symfony/dependency-injection": "^5.2",
