--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -1,11 +1,7 @@
-#index:
-#  path: /
-#  controller: App\Controller\DefaultController::index
-#
-#controllers:
-#  resource: ../../src/Controller/
-#  type: annotation
-#
-#kernel:
-#  resource: ../../src/Kernel.php
-#  type: annotation
+controllers:
+  resource: ../src/Core/Endpoints/Http/
+  type: annotation
+
+kernel:
+  resource: ../src/Core/Kernel.php
+  type: annotation
