--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     working_dir: "/app"
     command:
       - php
+      - -d
+      - zend_extension=xdebug.so
       - -S
       - 0.0.0.0:9000
       - -t
@@ -18,3 +20,5 @@ services:
     environment:
       APP_ENV: dev
       APP_DEBUG: 1
+      PHP_INI_XDEBUG_REMOTE_HOST: host.docker.internal
+      PHP_IDE_CONFIG: serverName=want2watch
