want2watch-5 convert dto to response

--- a/backend/phpstan.neon
+++ b/backend/phpstan.neon
@@ -7,3 +7,5 @@ parameters:
     paths:
         - src/
     inferPrivatePropertyTypeFromConstructor: true
+    ignoreErrors:
+        - '#Missing @throws LogicException .*#'
