--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 kernel:
   resource: ../src/Core/Kernel.php
   type: annotation
+
+_errors:
+  resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
+  prefix: /_error
