--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - ".:/app"
       - "~/.composer/auth.json:/root/.composer/auth.json"
     working_dir: "/app"
-    command: ["php", "-d", "zend_extension=xdebug.so", "-S", "0.0.0.0:9000", "-t", "/app/public"]
+    command: ["php", "-d", "zend_extension=xdebug.so",
+              "-S", "0.0.0.0:9000", "-t", "/app/public"]
     environment:
       APP_ENV: dev
       APP_DEBUG: 1
