--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ charset = utf-8
 end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
 tab_width = 4
 ij_continuation_indent_size = 8
@@ -11,7 +11,7 @@ ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_smart_tabs = false
-ij_visual_guides = none
+ij_visual_guides = 80, 120
 ij_wrap_on_typing = false
 
 [*.dart]
@@ -255,11 +255,18 @@ ij_java_wrap_comments = false
 ij_java_wrap_first_method_in_call_chain = false
 ij_java_wrap_long_lines = false
 
-[*.properties]
-ij_properties_align_group_field_declarations = false
-ij_properties_keep_blank_lines = false
-ij_properties_key_value_delimiter = equals
-ij_properties_spaces_around_key_value_delimiter = false
+[*.proto]
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 4
+ij_protobuf_keep_blank_lines_in_code = 2
+ij_protobuf_keep_indents_on_empty_lines = false
+ij_protobuf_keep_line_breaks = true
+ij_protobuf_space_after_comma = true
+ij_protobuf_space_before_comma = false
+ij_protobuf_spaces_around_assignment_operators = true
+ij_protobuf_spaces_within_braces = false
+ij_protobuf_spaces_within_brackets = false
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = false
@@ -286,6 +293,7 @@ ij_xml_space_after_tag_name = false
 ij_xml_space_around_equals_in_attribute = false
 ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
+ij_xml_use_custom_settings = false
 
 [{*.bash,*.sh,*.zsh}]
 indent_size = 2
@@ -304,6 +312,7 @@ ij_php_align_class_constants = false
 ij_php_align_group_field_declarations = false
 ij_php_align_inline_comments = false
 ij_php_align_key_value_pairs = false
+ij_php_align_match_arm_bodies = false
 ij_php_align_multiline_array_initializer_expression = false
 ij_php_align_multiline_binary_operation = false
 ij_php_align_multiline_chained_methods = false
@@ -312,6 +321,7 @@ ij_php_align_multiline_for = true
 ij_php_align_multiline_parameters = false
 ij_php_align_multiline_parameters_in_calls = true
 ij_php_align_multiline_ternary_operation = false
+ij_php_align_named_arguments = false
 ij_php_align_phpdoc_comments = false
 ij_php_align_phpdoc_param_names = false
 ij_php_anonymous_brace_style = end_of_line
@@ -431,6 +441,7 @@ ij_php_see_weight = 28
 ij_php_since_weight = 28
 ij_php_sort_phpdoc_elements = true
 ij_php_space_after_colon = true
+ij_php_space_after_colon_in_enum_backed_type = true
 ij_php_space_after_colon_in_named_argument = true
 ij_php_space_after_colon_in_return_type = true
 ij_php_space_after_comma = true
@@ -445,6 +456,7 @@ ij_php_space_before_catch_parentheses = true
 ij_php_space_before_class_left_brace = true
 ij_php_space_before_closure_left_parenthesis = true
 ij_php_space_before_colon = true
+ij_php_space_before_colon_in_enum_backed_type = false
 ij_php_space_before_colon_in_named_argument = false
 ij_php_space_before_colon_in_return_type = false
 ij_php_space_before_comma = false
@@ -480,6 +492,7 @@ ij_php_spaces_around_equality_operators = true
 ij_php_spaces_around_logical_operators = true
 ij_php_spaces_around_multiplicative_operators = true
 ij_php_spaces_around_null_coalesce_operator = true
+ij_php_spaces_around_pipe_in_union_type = false
 ij_php_spaces_around_relational_operators = true
 ij_php_spaces_around_shift_operators = true
 ij_php_spaces_around_unary_operator = false
@@ -691,24 +704,27 @@ ij_groovy_use_single_class_imports = true
 ij_groovy_variable_annotation_wrap = off
 ij_groovy_while_brace_force = never
 ij_groovy_while_on_new_line = false
+ij_groovy_wrap_chain_calls_after_dot = false
 ij_groovy_wrap_long_lines = false
 
-[{*.go,*.go2}]
+[{*.go, *.go2}]
 indent_style = tab
 ij_continuation_indent_size = 4
+ij_go_GROUP_CURRENT_PROJECT_IMPORTS = false
 ij_go_add_leading_space_to_comments = false
 ij_go_add_parentheses_for_single_import = false
 ij_go_call_parameters_new_line_after_left_paren = true
 ij_go_call_parameters_right_paren_on_new_line = true
 ij_go_call_parameters_wrap = off
 ij_go_fill_paragraph_width = 80
-ij_go_group_current_project_imports = false
 ij_go_group_stdlib_imports = false
 ij_go_import_sorting = gofmt
 ij_go_keep_indents_on_empty_lines = false
+ij_go_local_group_mode = project
 ij_go_move_all_imports_in_one_declaration = false
 ij_go_move_all_stdlib_imports_in_one_group = false
 ij_go_remove_redundant_import_aliases = false
+ij_go_run_go_fmt_on_reformat = true
 ij_go_use_back_quotes_for_imports = false
 ij_go_wrap_comp_lit = off
 ij_go_wrap_comp_lit_newline_after_lbrace = true
@@ -720,7 +736,7 @@ ij_go_wrap_func_result = off
 ij_go_wrap_func_result_newline_after_lparen = true
 ij_go_wrap_func_result_newline_before_rparen = true
 
-[{*.gradle.kts,*.kt,*.kts,*.main.kts,*.space.kts}]
+[{*.kt, *.kts}]
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
@@ -857,7 +873,6 @@ ij_html_space_after_tag_name = false
 ij_html_space_around_equality_in_attribute = false
 ij_html_space_inside_empty_tag = false
 ij_html_text_wrap = normal
-ij_html_uniform_ident = false
 
 [{*.markdown,*.md}]
 ij_markdown_force_one_space_after_blockquote_symbol = true
@@ -872,7 +887,27 @@ ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 1
 ij_markdown_min_lines_between_paragraphs = 1
 
-[{*.tf,*.tfvars}]
+[{*.pb, *.textproto}]
+indent_size = 2
+tab_width = 2
+ij_continuation_indent_size = 4
+ij_prototext_keep_blank_lines_in_code = 2
+ij_prototext_keep_indents_on_empty_lines = false
+ij_prototext_keep_line_breaks = true
+ij_prototext_space_after_colon = true
+ij_prototext_space_after_comma = true
+ij_prototext_space_before_colon = false
+ij_prototext_space_before_comma = false
+ij_prototext_spaces_within_braces = false
+ij_prototext_spaces_within_brackets = false
+
+[{*.properties, spring.handlers, spring.schemas}]
+ij_properties_align_group_field_declarations = false
+ij_properties_keep_blank_lines = false
+ij_properties_key_value_delimiter = equals
+ij_properties_spaces_around_key_value_delimiter = false
+
+[{*.tf, *.tfvars}]
 indent_size = 2
 ij_hcl-terraform_array_wrapping = 2
 ij_hcl-terraform_keep_blank_lines_in_code = 2
@@ -888,7 +923,7 @@ ij_hcl-terraform_spaces_within_braces = false
 ij_hcl-terraform_spaces_within_brackets = false
 ij_hcl-terraform_wrap_long_lines = false
 
-[{*.toml,Cargo.lock,Gopkg.lock,Pipfile}]
+[{*.toml, Cargo.lock, Cargo.toml.orig, Gopkg.lock, Pipfile, poetry.lock}]
 ij_toml_keep_indents_on_empty_lines = false
 
 [{*.yaml,*.yml,.analysis_options}]
