--- a/backend/composer.json
+++ b/backend/composer.json
@@ -39,6 +39,7 @@
         "symfony/http-foundation": "^5.2",
         "symfony/http-kernel": "^5.2",
         "symfony/routing": "^5.2",
+        "symfony/serializer-pack": "^1.0",
         "symfony/validator": "^5.2",
         "symfony/yaml": "^5.2"
     },
@@ -48,6 +49,6 @@
         "phpstan/phpstan-deprecation-rules": "^0.12.6",
         "phpstan/phpstan-strict-rules": "^0.12.9",
         "phpunit/phpunit": "^9.5",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-latest"
     }
 }
