want2watch-25 don't log httpexceptions
ref #25

--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -3,7 +3,7 @@ controllers:
   type: annotation
 
 kernel:
-  resource: ../src/Core/Kernel.php
+  resource: ../src/Infrastructure/IoC/Symfony/Kernel.php
   type: annotation
 
 _errors:
