--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -13,5 +13,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Validations
-        run: make lint build validate-post-build
+      - name: Pre-build validations
+        run: make lint
+      - name: Build application image
+        run: make build
+      - name: Post-build validations
+        run: make validate-post-build
