--- a/backend/phpstan.neon
+++ b/backend/phpstan.neon
@@ -7,5 +7,9 @@ parameters:
     paths:
         - src/
     inferPrivatePropertyTypeFromConstructor: true
-    ignoreErrors:
-        - '#Missing @throws LogicException .*#'
+    exceptionRules:
+        reportUnusedCatchesOfUncheckedExceptions: true
+        reportUnusedCheckedThrowsInSubtypes: true
+        uncheckedExceptions:
+            - LogicException
+            - RuntimeException
