want2watch-31 command
ref #31

--- a/backend/src/Infrastructure/Resources/services.yaml
+++ b/backend/src/Infrastructure/Resources/services.yaml
@@ -11,6 +11,10 @@ services:
     tags:
       - { name: controller.request_value_resolver, priority: 50 }
 
+  antonmarin\want2watch\Infrastructure\Http\OpenApiDtoGenerator\Command:
+    arguments:
+      - '%kernel.project_dir%/http/specification.yml'
+
   logger.critical:
     class: Symfony\Component\HttpKernel\Log\Logger
     arguments:
