--- a/backend/composer.json
+++ b/backend/composer.json
@@ -44,6 +44,7 @@
         "symfony/yaml": "^5.3"
     },
     "require-dev": {
+        "cebe/php-openapi": "^1.5",
         "pepakriz/phpstan-exception-rules": "^0.11.6",
         "phpstan/phpstan": "^0.12.74",
         "phpstan/phpstan-deprecation-rules": "^0.12.6",
