--- a/backend/src/Infrastructure/Resources/services.yaml
+++ b/backend/src/Infrastructure/Resources/services.yaml
@@ -11,7 +11,7 @@ services:
     tags:
       - { name: controller.request_value_resolver, priority: 50 }
 
-  antonmarin\want2watch\Infrastructure\Http\OpenApiDtoGenerator\Command:
+  antonmarin\want2watch\Infrastructure\Http\OpenApiCodeGenerator\Command:
     arguments:
       - '%kernel.project_dir%/http/specification.yml'
 
