want2watch-31 Command expects LogicException only when not implemented
ref #31

--- a/backend/phpstan.neon
+++ b/backend/phpstan.neon
@@ -6,6 +6,10 @@ parameters:
     level: 8
     paths:
         - src/
+    ignoreErrors:
+        -
+            message: '#Unused @throws Symfony\\Component\\Console\\Exception\\LogicException annotation#'
+            path: src/*/Endpoints/Cli/*.php
     inferPrivatePropertyTypeFromConstructor: true
     exceptionRules:
         reportUnusedCatchesOfUncheckedExceptions: true
