want2watch-7 generate code from specification after building application
ref #7

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,20 +4,23 @@ ENV PHP_INI_SESSION_USE_COOKIES=0
 FROM runtime as application-deps
 WORKDIR /app/
 COPY composer.json composer.lock ./
-RUN composer install --no-interaction --no-dev --no-suggest --optimize-autoloader
+RUN composer install --no-interaction --no-dev --no-suggest --no-autoloader
 
 FROM application-deps as debug-deps
-RUN composer install --no-interaction --no-suggest
+RUN composer install --no-interaction --no-suggest --no-autoloader
 
 FROM application-deps as application
 COPY bin ./bin/
 COPY public ./public/
 COPY src ./src/
 COPY config ./config/
-RUN bin/console cache:warmup --no-debug -e prod
+COPY http/specification.yml ./http/specification.yml
+ENV APP_DEBUG=0 APP_ENV=prod
+RUN composer dump-autoload -nao --no-dev
 
 FROM application as debug
 COPY --from=debug-deps /app/vendor ./vendor/
 COPY tests ./tests/
 COPY phpstan.neon phpunit.xml ./
-RUN bin/console cache:warmup -e test
+ENV APP_DEBUG=1 APP_ENV=test
+RUN composer dump-autoload -nao
