want2watch-42 remove antonmarin/want2watch from project namespace
ref #42

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,13 +11,16 @@
     ],
     "autoload": {
         "psr-4": {
-            "antonmarin\\want2watch\\": "src"
+            "": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "antonmarin\\want2watch\\": "tests/unit",
-            "antonmarin\\want2watch\\tests\\support\\": "tests/_support"
+            "": [
+              "tests/unit",
+              "tests/integration"
+            ],
+            "tests\\support\\": "tests/_support"
         }
     },
     "config": {
