Collect glide request
ref #45

--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -1,9 +1,9 @@
-controllers:
+core:
   resource: ../src/Core/Endpoints/Http/
   type: annotation
 
-kernel:
-  resource: ../src/Infrastructure/IoC/Symfony/Kernel.php
+events_collector:
+  resource: ../src/EventsCollector/Endpoints/Http/
   type: annotation
 
 _errors:
