--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -11,3 +11,4 @@ imports:
   # paths from ./config
   - { resource: '../src/Infrastructure/Resources/services.yaml' }
   - { resource: '../src/Core/Resources/services.yaml' }
+  - { resource: '../src/EventsCollector/Resources/services.yaml' }
