want2watch-53 setup security. custom auth
ref #53

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build application image
         run: make build
       - name: Post-build validations
-        run: make validate-post-build
+        run: make test
       - name: Push image
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
