want2watch-53 test authorization
+ fixed not authenticated access

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -12,7 +12,6 @@ COLOR_RED="\\033[31m"
 ###
 # Goals variables. Sort by name asc
 ###
-CMD_DOCKER_EXEC=docker-compose exec app
 CMD_DOCKER_RUN?=docker run -e APP_ENV=dev -e APP_DEBUG=false -e PHP_INI_MEMORY_LIMIT=256M -t --rm
 IMAGE_TAG?="antonmarin/want2watch:dev"
 
@@ -21,15 +20,13 @@ IMAGE_TAG?="antonmarin/want2watch:dev"
 ###
 lint: lint-composer lint-cs lint-dockerfile lint-markdown lint-yaml lint-spec #? prebuild validation
 pipe: lint build test #? behavior similar to CI pipeline
-test: container test-composer sat phpunit #? post-build validation
+test: test-composer test-di test-sast test-unit test-environment #? post-build validation
 
 ###
 # Goals. Sort by name asc
 ###
-build: #? build dev image
+build: #? build image
 	docker build . -t $(IMAGE_TAG)
-container:
-	$(CMD_DOCKER_RUN) $(IMAGE_TAG) bin/console -n lint:container
 fix-cs: #? fix codestyle
 	docker run --rm -v $(PWD):/data/ -w /data/ oskarstark/php-cs-fixer-ga:2.18.2 --diff --allow-risky=yes
 help: #? help me
@@ -47,7 +44,7 @@ help: #? help me
 	$(MAKEFILE_LIST) | column -ts:
 lint-composer:
 	docker run --rm -iv $(PWD):/app/ composer:1.9 validate --no-interaction --no-check-publish --with-dependencies
-	docker run --rm -v $(PWD):/app pplotka/local-php-security-checker-github-actions:v1.0.0
+	docker run --rm -v $(PWD)/composer.lock:/app/composer.lock pplotka/local-php-security-checker-github-actions:v1.0.0
 lint-cs:
 	docker run --rm -v $(PWD):/data/ -w /data/ oskarstark/php-cs-fixer-ga:2.18.2 --dry-run --diff --allow-risky=yes
 lint-dockerfile:
@@ -60,12 +57,16 @@ lint-spec:
 	docker run --rm -v $(PWD):/app jeanberu/swagger-cli swagger-cli validate /app/http/specification.yml
 lint-yaml:
 	docker run --rm -v $(PWD):/app -w /app sdesbure/yamllint sh -c "yamllint /app/*.yml /app/http/*.yml"
-phpunit:
-	$(CMD_DOCKER_RUN) $(IMAGE_TAG) vendor/bin/phpunit --configuration phpunit.xml
-sat:
-	$(CMD_DOCKER_RUN) $(IMAGE_TAG) vendor/bin/phpstan analyse
+test-unit:
+	$(CMD_DOCKER_RUN) $(IMAGE_TAG) vendor/bin/phpunit --configuration phpunit.xml --testsuite "unit tests"
+test-environment:
+	docker compose run app vendor/bin/phpunit --configuration phpunit.xml --testsuite "environment tests"
 spec-ui: #? UI to use specification
 	docker run --name swaggerui-want2watch -d -p 8092:8080 -e URL=openapi.yml -v $(PWD)/http/specification.yml:/usr/share/nginx/html/openapi.yml swaggerapi/swagger-ui
 	open http://localhost:8092
 test-composer:
 	$(CMD_DOCKER_RUN) $(IMAGE_TAG) bin/composer-require-checker.phar check /app/composer.json
+test-di:
+	$(CMD_DOCKER_RUN) $(IMAGE_TAG) bin/console -n lint:container
+test-sast:
+	$(CMD_DOCKER_RUN) $(IMAGE_TAG) vendor/bin/phpstan analyse
