--- a/backend/src/EventsCollector/Resources/services.yaml
+++ b/backend/src/EventsCollector/Resources/services.yaml
@@ -6,6 +6,7 @@ services:
   _defaults:
     autowire: true      # Automatically injects dependencies in your services.
     autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    public: false
 
   # make controllers available to inject services
   # this creates a service per class whose id is the fully-qualified class name
