--- a/.editorconfig
+++ b/.editorconfig
@@ -11,14 +11,15 @@ ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_smart_tabs = false
-ij_visual_guides = 80, 120
+ij_visual_guides = 80,120
 ij_wrap_on_typing = false
 
-[*.dart]
-max_line_length = 80
+[Makefile]
+indent_style = tab
 
 [*.feature]
 indent_size = 2
+ij_visual_guides = none
 ij_gherkin_keep_indents_on_empty_lines = false
 
 [*.java]
@@ -43,6 +44,7 @@ ij_java_align_multiline_text_blocks = false
 ij_java_align_multiline_throws_list = false
 ij_java_align_subsequent_simple_methods = false
 ij_java_align_throws_keyword = false
+ij_java_align_types_in_multi_catch = true
 ij_java_annotation_parameter_wrap = off
 ij_java_array_initializer_new_line_after_left_brace = false
 ij_java_array_initializer_right_brace_on_new_line = false
@@ -67,6 +69,7 @@ ij_java_blank_lines_before_imports = 1
 ij_java_blank_lines_before_method_body = 0
 ij_java_blank_lines_before_package = 0
 ij_java_block_brace_style = end_of_line
+ij_java_block_comment_add_space = false
 ij_java_block_comment_at_first_column = true
 ij_java_builder_methods = none
 ij_java_call_parameters_new_line_after_left_paren = false
@@ -80,6 +83,7 @@ ij_java_class_count_to_use_import_on_demand = 5
 ij_java_class_names_in_javadoc = 1
 ij_java_do_not_indent_top_level_class_members = false
 ij_java_do_not_wrap_after_single_annotation = false
+ij_java_do_not_wrap_after_single_annotation_in_parameter = false
 ij_java_do_while_brace_force = never
 ij_java_doc_add_blank_line_after_description = true
 ij_java_doc_add_blank_line_after_param_comments = false
@@ -135,6 +139,7 @@ ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = end_of_line
 ij_java_layout_static_imports_separately = true
 ij_java_line_comment_add_space = false
+ij_java_line_comment_add_space_on_reformat = false
 ij_java_line_comment_at_first_column = true
 ij_java_method_annotation_wrap = split_into_lines
 ij_java_method_brace_style = end_of_line
@@ -143,7 +148,9 @@ ij_java_method_parameters_new_line_after_left_paren = false
 ij_java_method_parameters_right_paren_on_new_line = false
 ij_java_method_parameters_wrap = off
 ij_java_modifier_list_wrap = false
+ij_java_multi_catch_types_wrap = normal
 ij_java_names_count_to_use_import_on_demand = 3
+ij_java_new_line_after_lparen_in_annotation = false
 ij_java_new_line_after_lparen_in_record_header = false
 ij_java_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_java_parameter_annotation_wrap = off
@@ -160,6 +167,7 @@ ij_java_replace_sum_lambda_with_method_ref = true
 ij_java_resource_list_new_line_after_left_paren = false
 ij_java_resource_list_right_paren_on_new_line = false
 ij_java_resource_list_wrap = off
+ij_java_rparen_on_new_line_in_annotation = false
 ij_java_rparen_on_new_line_in_record_header = false
 ij_java_space_after_closing_angle_bracket_in_type_argument = false
 ij_java_space_after_colon = true
@@ -208,6 +216,7 @@ ij_java_space_within_empty_array_initializer_braces = false
 ij_java_space_within_empty_method_call_parentheses = false
 ij_java_space_within_empty_method_parentheses = false
 ij_java_spaces_around_additive_operators = true
+ij_java_spaces_around_annotation_eq = true
 ij_java_spaces_around_assignment_operators = true
 ij_java_spaces_around_bitwise_operators = true
 ij_java_spaces_around_equality_operators = true
@@ -259,6 +268,7 @@ ij_java_wrap_long_lines = false
 indent_size = 2
 tab_width = 2
 ij_continuation_indent_size = 4
+ij_visual_guides = none
 ij_protobuf_keep_blank_lines_in_code = 2
 ij_protobuf_keep_indents_on_empty_lines = false
 ij_protobuf_keep_line_breaks = true
@@ -269,6 +279,7 @@ ij_protobuf_spaces_within_braces = false
 ij_protobuf_spaces_within_brackets = false
 
 [.editorconfig]
+ij_visual_guides = none
 ij_editorconfig_align_group_field_declarations = false
 ij_editorconfig_space_after_colon = false
 ij_editorconfig_space_after_comma = true
@@ -276,10 +287,15 @@ ij_editorconfig_space_before_colon = false
 ij_editorconfig_space_before_comma = false
 ij_editorconfig_spaces_around_assignment_operators = true
 
+[go.mod]
+ij_visual_guides = none
+
 [{*.ant,*.fxml,*.jhm,*.jnlp,*.jrxml,*.plist,*.pom,*.rng,*.tld,*.wsdl,*.xml,*.xsd,*.xsl,*.xslt,*.xul,phpunit.xml.dist}]
+ij_visual_guides = none
 ij_xml_align_attributes = true
 ij_xml_align_text = false
 ij_xml_attribute_wrap = normal
+ij_xml_block_comment_add_space = false
 ij_xml_block_comment_at_first_column = true
 ij_xml_keep_blank_lines = 2
 ij_xml_keep_indents_on_empty_lines = false
@@ -305,7 +321,7 @@ ij_shell_redirect_followed_by_space = false
 ij_shell_switch_cases_indented = false
 ij_shell_use_unix_line_separator = true
 
-[{*.ctp,*.hphp,*.inc,*.module,*.php,*.php4,*.php5,*.phtml,.php_cs}]
+[{*.ctp,*.hphp,*.inc,*.module,*.php,*.php4,*.php5,*.phtml,*.stub,.php_cs}]
 ij_continuation_indent_size = 4
 ij_php_align_assignments = false
 ij_php_align_class_constants = false
@@ -373,6 +389,7 @@ ij_php_for_brace_force = always
 ij_php_for_statement_new_line_after_left_paren = true
 ij_php_for_statement_right_paren_on_new_line = true
 ij_php_for_statement_wrap = off
+ij_php_force_empty_methods_in_one_line = false
 ij_php_force_short_declaration_array_style = false
 ij_php_getters_setters_naming_style = camel_case
 ij_php_getters_setters_order_style = getters_first
@@ -525,9 +542,10 @@ ij_php_while_brace_force = always
 ij_php_while_on_new_line = false
 
 [{*.ft,*.vm,*.vsl}]
+ij_visual_guides = none
 ij_vtl_keep_indents_on_empty_lines = false
 
-[{*.gant,*.gradle,*.groovy,*.gy}]
+[{*.gant,*.groovy,*.gy}]
 ij_groovy_align_group_field_declarations = false
 ij_groovy_align_multiline_array_initializer_expression = false
 ij_groovy_align_multiline_assignment = false
@@ -562,6 +580,7 @@ ij_groovy_blank_lines_before_imports = 1
 ij_groovy_blank_lines_before_method_body = 0
 ij_groovy_blank_lines_before_package = 0
 ij_groovy_block_brace_style = end_of_line
+ij_groovy_block_comment_add_space = false
 ij_groovy_block_comment_at_first_column = true
 ij_groovy_call_parameters_new_line_after_left_paren = false
 ij_groovy_call_parameters_right_paren_on_new_line = false
@@ -604,6 +623,7 @@ ij_groovy_label_indent_size = 0
 ij_groovy_lambda_brace_style = end_of_line
 ij_groovy_layout_static_imports_separately = true
 ij_groovy_line_comment_add_space = false
+ij_groovy_line_comment_add_space_on_reformat = false
 ij_groovy_line_comment_at_first_column = true
 ij_groovy_method_annotation_wrap = split_into_lines
 ij_groovy_method_brace_style = end_of_line
@@ -613,6 +633,7 @@ ij_groovy_method_parameters_right_paren_on_new_line = false
 ij_groovy_method_parameters_wrap = off
 ij_groovy_modifier_list_wrap = false
 ij_groovy_names_count_to_use_import_on_demand = 3
+ij_groovy_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_groovy_parameter_annotation_wrap = off
 ij_groovy_parentheses_expression_new_line_after_left_paren = false
 ij_groovy_parentheses_expression_right_paren_on_new_line = false
@@ -651,6 +672,7 @@ ij_groovy_space_before_method_call_parentheses = false
 ij_groovy_space_before_method_left_brace = true
 ij_groovy_space_before_method_parentheses = false
 ij_groovy_space_before_quest = true
+ij_groovy_space_before_record_parentheses = false
 ij_groovy_space_before_switch_left_brace = true
 ij_groovy_space_before_switch_parentheses = true
 ij_groovy_space_before_synchronized_left_brace = true
@@ -707,9 +729,10 @@ ij_groovy_while_on_new_line = false
 ij_groovy_wrap_chain_calls_after_dot = false
 ij_groovy_wrap_long_lines = false
 
-[{*.go, *.go2}]
+[{*.go,*.go2}]
 indent_style = tab
 ij_continuation_indent_size = 4
+ij_visual_guides = none
 ij_go_GROUP_CURRENT_PROJECT_IMPORTS = false
 ij_go_add_leading_space_to_comments = false
 ij_go_add_parentheses_for_single_import = false
@@ -736,7 +759,8 @@ ij_go_wrap_func_result = off
 ij_go_wrap_func_result_newline_after_lparen = true
 ij_go_wrap_func_result_newline_before_rparen = true
 
-[{*.kt, *.kts}]
+[{*.gradle.kts,*.kt,*.kts,*.main.kts,*.space.kts}]
+ij_visual_guides = none
 ij_kotlin_align_in_columns_case_branch = false
 ij_kotlin_align_multiline_binary_operation = false
 ij_kotlin_align_multiline_extends_list = false
@@ -749,6 +773,7 @@ ij_kotlin_assignment_wrap = normal
 ij_kotlin_blank_lines_after_class_header = 0
 ij_kotlin_blank_lines_around_block_when_branches = 0
 ij_kotlin_blank_lines_before_declaration_with_comment_or_annotation_on_separate_line = 1
+ij_kotlin_block_comment_add_space = false
 ij_kotlin_block_comment_at_first_column = true
 ij_kotlin_call_parameters_new_line_after_left_paren = true
 ij_kotlin_call_parameters_right_paren_on_new_line = true
@@ -780,6 +805,7 @@ ij_kotlin_keep_indents_on_empty_lines = false
 ij_kotlin_keep_line_breaks = true
 ij_kotlin_lbrace_on_next_line = false
 ij_kotlin_line_comment_add_space = false
+ij_kotlin_line_comment_add_space_on_reformat = false
 ij_kotlin_line_comment_at_first_column = true
 ij_kotlin_method_annotation_wrap = split_into_lines
 ij_kotlin_method_call_chain_wrap = normal
@@ -818,8 +844,9 @@ ij_kotlin_wrap_elvis_expressions = 1
 ij_kotlin_wrap_expression_body_functions = 1
 ij_kotlin_wrap_first_method_in_call_chain = false
 
-[{*.har,*.json,composer.lock}]
+[{*.har,*.json}]
 indent_size = 2
+ij_visual_guides = none
 ij_json_keep_blank_lines_in_code = 0
 ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
@@ -833,13 +860,14 @@ ij_json_wrap_long_lines = false
 
 [{*.hcl,*.nomad}]
 indent_size = 2
-ij_hcl_array_wrapping = 2
+ij_visual_guides = none
+ij_hcl_array_wrapping = normal
 ij_hcl_keep_blank_lines_in_code = 2
 ij_hcl_keep_indents_on_empty_lines = false
 ij_hcl_keep_line_breaks = true
-ij_hcl_object_wrapping = 2
-ij_hcl_property_alignment = 0
-ij_hcl_property_line_commenter_character = 0
+ij_hcl_object_wrapping = normal
+ij_hcl_property_alignment = 2
+ij_hcl_property_line_commenter_character = 1
 ij_hcl_space_after_comma = true
 ij_hcl_space_before_comma = false
 ij_hcl_spaces_around_assignment_operators = true
@@ -848,10 +876,12 @@ ij_hcl_spaces_within_brackets = false
 ij_hcl_wrap_long_lines = false
 
 [{*.htm,*.html,*.sht,*.shtm,*.shtml}]
+ij_visual_guides = none
 ij_html_add_new_line_before_tags = body,div,p,form,h1,h2,h3
 ij_html_align_attributes = true
 ij_html_align_text = false
 ij_html_attribute_wrap = normal
+ij_html_block_comment_add_space = false
 ij_html_block_comment_at_first_column = true
 ij_html_do_not_align_children_of_min_lines = 0
 ij_html_do_not_break_if_inline_tags = title,h1,h2,h3,h4,h5,h6,p
@@ -879,18 +909,23 @@ ij_markdown_force_one_space_after_blockquote_symbol = true
 ij_markdown_force_one_space_after_header_symbol = true
 ij_markdown_force_one_space_after_list_bullet = true
 ij_markdown_force_one_space_between_words = true
+ij_markdown_insert_quote_arrows_on_wrap = true
 ij_markdown_keep_indents_on_empty_lines = false
+ij_markdown_keep_line_breaks_inside_text_blocks = true
 ij_markdown_max_lines_around_block_elements = 1
 ij_markdown_max_lines_around_header = 1
 ij_markdown_max_lines_between_paragraphs = 1
 ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 1
 ij_markdown_min_lines_between_paragraphs = 1
+ij_markdown_wrap_text_if_long = true
+ij_markdown_wrap_text_inside_blockquotes = true
 
-[{*.pb, *.textproto}]
+[{*.pb,*.textproto}]
 indent_size = 2
 tab_width = 2
 ij_continuation_indent_size = 4
+ij_visual_guides = none
 ij_prototext_keep_blank_lines_in_code = 2
 ij_prototext_keep_indents_on_empty_lines = false
 ij_prototext_keep_line_breaks = true
@@ -901,19 +936,21 @@ ij_prototext_space_before_comma = false
 ij_prototext_spaces_within_braces = false
 ij_prototext_spaces_within_brackets = false
 
-[{*.properties, spring.handlers, spring.schemas}]
+[{*.properties,spring.handlers,spring.schemas}]
+ij_visual_guides = none
 ij_properties_align_group_field_declarations = false
 ij_properties_keep_blank_lines = false
 ij_properties_key_value_delimiter = equals
 ij_properties_spaces_around_key_value_delimiter = false
 
-[{*.tf, *.tfvars}]
+[{*.tf,*.tfvars}]
 indent_size = 2
-ij_hcl-terraform_array_wrapping = 2
+ij_visual_guides = none
+ij_hcl-terraform_array_wrapping = normal
 ij_hcl-terraform_keep_blank_lines_in_code = 2
 ij_hcl-terraform_keep_indents_on_empty_lines = false
 ij_hcl-terraform_keep_line_breaks = true
-ij_hcl-terraform_object_wrapping = 2
+ij_hcl-terraform_object_wrapping = normal
 ij_hcl-terraform_property_alignment = 0
 ij_hcl-terraform_property_line_commenter_character = 0
 ij_hcl-terraform_space_after_comma = true
@@ -923,10 +960,11 @@ ij_hcl-terraform_spaces_within_braces = false
 ij_hcl-terraform_spaces_within_brackets = false
 ij_hcl-terraform_wrap_long_lines = false
 
-[{*.toml, Cargo.lock, Cargo.toml.orig, Gopkg.lock, Pipfile, poetry.lock}]
+[{*.toml,Cargo.lock,Cargo.toml.orig,Gopkg.lock,Pipfile,poetry.lock}]
+ij_visual_guides = none
 ij_toml_keep_indents_on_empty_lines = false
 
-[{*.yaml,*.yml,.analysis_options}]
+[{*.yaml,*.yml}]
 indent_size = 2
 ij_yaml_align_values_properties = do_not_align
 ij_yaml_autoinsert_sequence_marker = true
@@ -937,4 +975,4 @@ ij_yaml_keep_line_breaks = true
 ij_yaml_sequence_on_new_line = false
 ij_yaml_space_before_colon = false
 ij_yaml_spaces_within_braces = true
-ij_yaml_spaces_within_brackets = true
+ij_yaml_spaces_within_brackets = false
