--- a/backend/composer.json
+++ b/backend/composer.json
@@ -18,7 +18,8 @@
     "psr-4": {
       "": [
         "tests/unit",
-        "tests/integration"
+        "tests/integration",
+        "tests/component"
       ],
       "tests\\support\\": "tests/_support"
     }
@@ -57,7 +58,8 @@
     "phpstan/phpstan-deprecation-rules": "^0.12.6",
     "phpstan/phpstan-strict-rules": "^0.12.9",
     "phpunit/phpunit": "^9.5",
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "symfony/browser-kit": "^5.4"
   },
   "scripts": {
     "post-autoload-dump": [
