--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,3 +1,4 @@
+# used only for dev
 ---
 version: "3.9"
 services:
@@ -14,6 +15,7 @@ services:
     environment:
       APP_ENV: dev
       APP_DEBUG: 1
+      FRAMEWORK_TEST: "false"
       GLIDE_PASS: |-
         $$2y$$13$$CKKFnANpn4L7KAk7o37OaujGNEpRk/4RbbCM3oB9PGCTiD5CNu1vi
       PHP_INI_XDEBUG_REMOTE_HOST: host.docker.internal
