--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,10 +4,10 @@ version: "3.9"
 services:
   app:
     build: .
+    image: antonmarin/want2watch:latest
     ports:
       - "8080:9000"
     volumes:
-      - ".:/app"
       - "~/.composer/auth.json:/root/.composer/auth.json"
     working_dir: "/app"
     command: ["php", "-d", "zend_extension=xdebug.so",
